SONARJAVA-4254 Fix FP S4684 when @Entity are not converter from json automatically